-

    Bug fixed: Custom field selects with forced values overrides the
    list of options.

    Bug fixed: Fixed a bug where some saved followup drafts weren't
    saved as Unicode.
    
    Bug fixed: Custom field type validity check failed on values that
    were already lists or tuples and don't need to be converted to a
    list.
    
    Bug fixed: Custom fields that were "ulines" or "lines" and 
    multiple="multiple" would become nested lists until flattened.
   
    New feature: Any filtering done by spider bots are not
    persistently saved.

- 0.10.0

    New feature: Custom fields!

- 0.9.3

    Bug fixed: Loading a saved draft followup that didn't have an
    action would raise an error.
    
    Bug fixed: Loading filter options in Konquerer would load the AJAX
    request 3 times for one click.
    
    Bug fixed: Saved filters container was never imploded even if the 
    container had more saved filters in it than allowed.
    
    Bug fixed: Saving filters when only the fromname is known would
    raise an UnmatchableError.
    
- 0.9.1

    Bug fixed: NameError when checking for emails in and nothing to
    download. Thanks Luciano (Real#0743)
    

- 0.9.2

    Bug fixed: When accepting multipart emails and html2safehtml is
    not installed the default part to keep is now the text/plain part.

    Bug fixed: Loading a saved draft followup that didn't have an
    action would raise an error.
    
    Bug fixed: Loading filter options in Konquerer would load the AJAX
    request 3 times for one click.
    
    Bug fixed: Saved filters container was never imploded even if the 
    container had more saved filters in it than allowed.
    
    Bug fixed: Saving filters when only the fromname is known would
    raise an UnmatchableError.
    
- 0.9.1

    Bug fixed: Saved cookies with where only the name is known could
    cause an error on the /User page.

    Bug fixed: Delete issue form did not work.
    
- 0.9.0
